Issue #1806834 by MDJ Webdiensten: applying fixes for non-kickstart collapsible filters, bulk operations alignment, and admin menu bug

--- a/scss/contrib.scss
+++ b/scss/contrib.scss
@@ -396,6 +396,9 @@ html.js .vbo-views-form .fieldset-wrapper {
   outline: 0;
   padding: 0;
 }
+html.js .view-filters fieldset.collapsible {
+  min-height: 30px;
+}
 html.js .view-filters fieldset.collapsible .fieldset-wrapper,
 html.js .vbo-views-form fieldset .fieldset-wrapper {
   margin-bottom: 30px;
@@ -611,7 +614,7 @@ html.js #-commerce-kickstart-help-store fieldset.collapsible {
   max-width: 250px;
 }
 /* Making wide enough to fit min and max date fields inline */
-.views-exposed-form #edit-date-filter-wrapper {
+.commerce-backoffice-view .views-exposed-form #edit-date-filter-wrapper {
   width: 650px;
 }
 .commerce-backoffice-view .views-exposed-form #edit-date-filter-wrapper .views-widget {
@@ -650,8 +653,11 @@ html.js .views-exposed-form .form-item input.throbbing {
   padding: 3px 20px 3px 5px; /* LTR */
 }
 .vbo-views-form #edit-select .fieldset-wrapper {
-  padding: 3px 0 0 16px; /* LTR */
+  padding: 3px 0 0; /* LTR */
   width: auto;
+}
+.commerce-backoffice-view .vbo-views-form #edit-select .fieldset-wrapper {
+  padding: 3px 0 0 16px; /* LTR */
 }
 .vbo-views-form #edit-select .fieldset-wrapper input.form-submit {
   float: left; /* LTR */
@@ -731,7 +737,7 @@ html.js .views-exposed-form .form-item input.throbbing {
       background-position: 0 -60px;
     }
   }
-  .vbo-views-form {
+  .commerce-backoffice-view .vbo-views-form {
     #edit-select .fieldset-wrapper {
       padding: 3px 0 0 20px; /* LTR */
     }
@@ -764,6 +770,9 @@ noindex:-o-prefocus, form table {
 .vbo-views-form .form-item-operation {
   float: left; /* LTR */
   margin-top: 9px;
+  padding: 2px 10px 0 0;
+}
+.commerce-backoffice-view .vbo-views-form .form-item-operation {
   padding: 2px 10px 0 30px; /* LTR */
 }
 .vbo-views-form .form-item-operation #edit-operation {
@@ -1019,7 +1028,12 @@ html.js .vbo-views-form #edit-select fieldset .fieldset-wrapper{
   margin-bottom: -50px;
 }
 
-
+/* Admin module link fix */
+div#admin-toolbar * {
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
 /* @end */
 
 /* @end */
